--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jquery": "^2.0.33",
     "@types/node": "^6.0.46",
+    "@types/webpack": "^1.12.35",
     "soy-loader": "^0.1.3",
     "webpack": "^1.13.3"
   },
